--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="contenedor-encabezado">
             <h1 class="titulo">MUSEO FUTBOLERO</h1>
             <a href="index.html">
-            <img src="/img/logo.png" alt="Logo" class="logo">
+            <img src="./img/logo.png" alt="Logo" class="logo">
             </a>
             <div class="links-derecha">
             <a class="texto-nosotros" href="pages/sobre-nosotros.html">SOBRE NOSOTROS</a>
@@ -54,7 +54,7 @@
 
     <div class="collapse navbar-collapse" id="menuPrincipal">
     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link text-light" href="/index.html">INICIO</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="index.html">INICIO</a></li>
         <li class="nav-item"><a class="nav-link text-light" href="./pages/preguntas-frecuentes.html">PREGUNTAS</a></li>
         <li class="nav-item"><a class="nav-link text-light" href="./pages/lavado-recomendado.html">LAVADO</a></li>
         <li class="nav-item"><a class="nav-link text-light" href="./pages/contactanos.html">CONTACTANOS</a></li>
