--- a/pages/cuenta.html
+++ b/pages/cuenta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de cuenta</title>
-    <link rel="stylesheet" href="/stylescss/style.css">
+    <link rel="stylesheet" href="../stylescss/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
@@ -15,11 +15,11 @@
             <!-- Nombre y logo de la web -->
             <div class="contenedor-encabezado">
                 <h1 class="titulo">MUSEO FUTBOLERO</h1>
-                <a href="/index.html">
+                <a href="../index.html">
                 <img src="../img/logo.png" alt="Logo" class="logo">
                 </a>
                 <div class="links-derecha">
-                <a class="texto-nosotros" href="/pages/sobre-nosotros.html">SOBRE NOSOTROS</a>
+                <a class="texto-nosotros" href="sobre-nosotros.html">SOBRE NOSOTROS</a>
                 </div>
             </div>
             <!-- Barra de navegacion, cuenta y carrit-->
@@ -54,9 +54,9 @@
     <div class="collapse navbar-collapse" id="menuPrincipal">
     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link text-light" href="../index.html">INICIO</a></li>
-        <li class="nav-item"><a class="nav-link text-light" href="/pages/preguntas-frecuentes.html">PREGUNTAS</a></li>
-        <li class="nav-item"><a class="nav-link text-light" href="/pages/lavado-recomendado.html">LAVADO</a></li>
-        <li class="nav-item"><a class="nav-link text-light" href="/pages/contactanos.html">CONTACTANOS</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="preguntas-frecuentes.html">PREGUNTAS</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="lavado-recomendado.html">LAVADO</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="contactanos.html">CONTACTANOS</a></li>
     </ul>
     </div>
 </div>
@@ -79,7 +79,7 @@
                 <label for="contraseña">Confirmar contraseña</label>
                 <input class="input-cuenta" type="password" name="contraseña" id="contraseña" required>
                 <button type="button" class="btn btn-success w-100">Crear cuenta</button>
-                <h3 class="h3-cuenta">¿Ya tenés cuenta?<a class="enlace-inicar-sesion" href="/pages/inicio-sesion.html">Inicia sesión</a></h3>
+                <h3 class="h3-cuenta">¿Ya tenés cuenta?<a class="enlace-inicar-sesion" href="inicio-sesion.html">Inicia sesión</a></h3>
                 </div>
                 </section>
         </main>
@@ -101,9 +101,9 @@
                 <nav>
                     <h4 class="navegacion">NAVEGACIÓN</h4>
                     <ul>
-                        <li class="lista-navegacion"><a class="links-navegacion" href="/index.html">Productos</a></li>
-                        <li class="lista-navegacion"><a class="links-navegacion" href="/pages/contactanos.html">Contactanos</a></li>
-                        <li class="lista-navegacion"><a class="links-navegacion" href="/pages/preguntas-frecuentes.html">Preguntas frecuentes</a></li>
+                        <li class="lista-navegacion"><a class="links-navegacion" href="../index.html">Productos</a></li>
+                        <li class="lista-navegacion"><a class="links-navegacion" href="contactanos.html">Contactanos</a></li>
+                        <li class="lista-navegacion"><a class="links-navegacion" href="preguntas-frecuentes.html">Preguntas frecuentes</a></li>
                     </ul>
                 </nav>
         
