--- a/pages/preguntas-frecuentes.html
+++ b/pages/preguntas-frecuentes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pregunta frecuentes</title>
-    <link rel="stylesheet" href="/stylescss/style.css">
+    <link rel="stylesheet" href="../stylescss/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
@@ -14,11 +14,11 @@
         <!-- Nombre y logo de la web -->
         <div class="contenedor-encabezado">
             <h1 class="titulo">MUSEO FUTBOLERO</h1>
-            <a href="/index.html">
+            <a href="../index.html">
             <img src="../img/logo.png" alt="Logo" class="logo">
             </a>
             <div class="links-derecha">
-            <a class="texto-nosotros" href="/pages/sobre-nosotros.html">SOBRE NOSOTROS</a>
+            <a class="texto-nosotros" href="sobre-nosotros.html">SOBRE NOSOTROS</a>
             </div>
         </div>
         <div class="barra-cuenta-carrito">
@@ -33,7 +33,7 @@
 </div>
 </nav>
             <div class="cuenta-compras">
-            <a class="a-cuenta-compras" href="/pages/cuenta.html">
+            <a class="a-cuenta-compras" href="cuenta.html">
                 <img class="inicio-sesion" src="../img/13957.png" alt="Inicio-de-sesion"></a>
             <a class="a-cuenta-compras" href="">
                 <img class="carro-compras" src="../img/carrito-de-compras.png" alt="Carro-de-compras"></a>
@@ -52,9 +52,9 @@
     <div class="collapse navbar-collapse" id="menuPrincipal">
     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link text-light" href="../index.html">INICIO</a></li>
-        <li class="nav-item"><a class="nav-link text-light" href="/pages/preguntas-frecuentes.html">PREGUNTAS</a></li>
-        <li class="nav-item"><a class="nav-link text-light" href="/pages/lavado-recomendado.html">LAVADO</a></li>
-        <li class="nav-item"><a class="nav-link text-light" href="/pages/contactanos.html">CONTACTANOS</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="preguntas-frecuentes.html">PREGUNTAS</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="lavado-recomendado.html">LAVADO</a></li>
+        <li class="nav-item"><a class="nav-link text-light" href="contactanos.html">CONTACTANOS</a></li>
     </ul>
     </div>
 </div>
@@ -114,9 +114,9 @@
             <nav>
                 <h4 class="navegacion">NAVEGACIÓN</h4>
                 <ul>
-                    <li class="lista-navegacion"><a class="links-navegacion" href="/index.html">Productos</a></li>
-                    <li class="lista-navegacion"><a class="links-navegacion" href="/pages/contactanos.html">Contactanos</a></li>
-                    <li class="lista-navegacion"><a class="links-navegacion" href="/pages/preguntas-frecuentes.html">Preguntas frecuentes</a></li>
+                        <li class="lista-navegacion"><a class="links-navegacion" href="../index.html">Productos</a></li>
+                        <li class="lista-navegacion"><a class="links-navegacion" href="contactanos.html">Contactanos</a></li>
+                        <li class="lista-navegacion"><a class="links-navegacion" href="preguntas-frecuentes.html">Preguntas frecuentes</a></li>
                 </ul>
             </nav>
     
