--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div class="collapse navbar-collapse" id="menuPrincipal">
     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link text-light" href="./index.html">INICIO</a>
+        <li class="nav-item"><a class="nav-link text-light" href="./">INICIO</a>
         <li class="nav-item"><a class="nav-link text-light" href="./pages/preguntas-frecuentes.html">PREGUNTAS</a></li>
         <li class="nav-item"><a class="nav-link text-light" href="./pages/lavado-recomendado.html">LAVADO</a></li>
         <li class="nav-item"><a class="nav-link text-light" href="./pages/contactanos.html">CONTACTANOS</a></li>
