Actualización final del proyecto: HTML, SCSS, diseño responsive

--- a/pages/cuenta.html
+++ b/pages/cuenta.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Camisetas retro de fútbol clásicas de Argentina, Europa y más.">
+    <meta name="keywords" content="camisetas retro, fútbol, messi, maradona, batistuta, vintage">
     <title>Registro de cuenta</title>
     <link rel="stylesheet" href="../stylescss/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
