--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Camisetas retro de fútbol clásicas de Argentina, Europa y más.">
+    <meta name="keywords" content="camisetas retro, fútbol, messi, maradona, batistuta, vintage">
     <title>Contactanos</title>
     <link rel="stylesheet" href="../stylescss/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -18,7 +20,7 @@
             <img src="../img/logo.png" alt="Logo" class="logo">
             </a>
             <div class="links-derecha">
-            <a class="texto-nosotros" href="pages/sobre-nosotros.html">SOBRE NOSOTROS</a>
+            <a class="texto-nosotros" href="sobre-nosotros.html">SOBRE NOSOTROS</a>
             </div>
         </div>
         <!-- Barra de navegacion, cuenta y carrit-->
